# cmake-project-template

./: .gitignore  CMakeLists.txt  README.md  cmake-project-template.md
src/: CMakeLists.txt  main.cpp
src/prjlib/: CMakeLists.txt  prjlib.cpp
test/: CMakeLists.txt
test/src/: prjlib_test.cpp
