cmake_minimum_required(VERSION 3.7 FATAL_ERROR)

# cmake variables

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

set(PROJECT_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)

# debug

message( STATUS "CMAKE_CXX_STANDARD: " ${CMAKE_CXX_STANDARD} )
message( STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS} )
message( STATUS "CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR} )
message( STATUS "EXECUTABLE_OUTPUT_PATH: " ${EXECUTABLE_OUTPUT_PATH} )
message( STATUS "LIBRARY_OUTPUT_PATH: " ${LIBRARY_OUTPUT_PATH} )
message( STATUS "PROJECT_INCLUDE_DIR: " ${PROJECT_INCLUDE_DIR} )

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(PRJ_DIR_INCLUDE ${PROJECT_SOURCE_DIR}/include)
set(PRJ_DIR_SRC ${PROJECT_SOURCE_DIR}/src)

add_subdirectory(src)
add_subdirectory(test)



